native/bridge.h

#ifndef SOUNDTOUCH_BRIDGE_H
#define SOUNDTOUCH_BRIDGE_H

// C언어 규칙으로 이름을 고정해서 ffigen이 읽을 수 있도록 함
#ifdef __cplusplus
extern "C"
{
#endif

#include <stdint.h>

// Windows에서 DLL 함수를 외부에 공개하기 위한 선언
#ifdef _WIN32
#define FFI_EXPORT __declspec(dllexport)
#else
#define FFI_EXPORT
#endif

    typedef void *st_handle;

    // 모든 함수 앞에 FFI_EXPORT를 붙여줍니다.
    FFI_EXPORT st_handle st_create();
    FFI_EXPORT void st_set_settings(st_handle handle, int32_t sampleRate, int32_t channels, float pitch, float tempo);
    FFI_EXPORT void st_put_samples(st_handle handle, const float *samples, int32_t numSamples);
    FFI_EXPORT int32_t st_receive_samples(st_handle handle, float *outputBuffer, int32_t maxSamples);
    FFI_EXPORT void st_destroy(st_handle handle);

#ifdef __cplusplus
}
#endif

#endif // SOUNDTOUCH_BRIDGE_H